--- a/.github/workflows/X86-64.yml
+++ b/.github/workflows/X86-64.yml
@@ -10,11 +10,11 @@ name: Build X86-64+passwall-20200818
 on: 
   release:
     types: [published]
-#  push:
-#    branches: 
-#      - master
-#  watch:
-#    types: [started]
+    push:
+     branches: 
+     - master
+    watch:
+      types: [started]
 
 jobs:
   build:
@@ -69,7 +69,7 @@ jobs:
         
     - name: Clone passwall code
       run: |
-        cd lede/package &&  git clone https://github.com/chengood5000/passwall652.git
+        cd lede/package &&  git clone https://github.com/xiaorouji/openwrt-passwall.git
          ##下载别人备份的passwall源代码。
         
       
