--- a/X86.config
+++ b/X86.config
@@ -45,11 +45,11 @@ CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_luci-app-xlnetacc=y
+# CONFIG_PACKAGE_luci-app-xlnetacc=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-aliddns=y
-CONFIG_PACKAGE_luci-app-docker=y
-CONFIG_PACKAGE_luci-lib-docker=y
+# CONFIG_PACKAGE_luci-app-docker=y
+# CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
 CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
@@ -103,19 +103,19 @@ CONFIG_PACKAGE_kmod-usb3=y
 # +03
 # 无线驱动
 #
-CONFIG_PACKAGE_ipq-wifi-p2w_r619ac=y
+# CONFIG_PACKAGE_ipq-wifi-p2w_r619ac=y
 # CONFIG_PACKAGE_ath10k-firmware-qca4019=y
-CONFIG_PACKAGE_wireless-regdb=y
-CONFIG_PACKAGE_kmod-ath=y
-CONFIG_ATH_USER_REGD=y
-CONFIG_PACKAGE_ATH_DFS=y
+# CONFIG_PACKAGE_wireless-regdb=y
+# CONFIG_PACKAGE_kmod-ath=y
+# CONFIG_ATH_USER_REGD=y
+# CONFIG_PACKAGE_ATH_DFS=y
 # CONFIG_PACKAGE_kmod-ath10k=y
-CONFIG_ATH10K_LEDS=y
-CONFIG_ATH10K_THERMAL=y
-CONFIG_PACKAGE_kmod-cfg80211=y
-CONFIG_PACKAGE_kmod-mac80211=y
-CONFIG_PACKAGE_MAC80211_DEBUGFS=y
-CONFIG_PACKAGE_MAC80211_MESH=y
+# CONFIG_ATH10K_LEDS=y
+# CONFIG_ATH10K_THERMAL=y
+# CONFIG_PACKAGE_kmod-cfg80211=y
+# CONFIG_PACKAGE_kmod-mac80211=y
+# CONFIG_PACKAGE_MAC80211_DEBUGFS=y
+# CONFIG_PACKAGE_MAC80211_MESH=y
 
 
 # +04
