--- a/X86.config
+++ b/X86.config
@@ -48,6 +48,8 @@ CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-fileassistant=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-aliddns=y
+CONFIG_PACKAGE_luci-app-serverchan=y
+CONFIG_DEFAULT_luci-app-jd-dailybonus="!"
 # CONFIG_PACKAGE_luci-app-docker=y
 # CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
@@ -123,7 +125,7 @@ CONFIG_PACKAGE_kmod-usb3=y
 #
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-
+CONFIG_PACKAGE_luci-theme-argon_new=y
 
 # +04
 # 基础命令及其他
