--- a/.github/workflows/x86-64dlonzyz.yml
+++ b/.github/workflows/x86-64dlonzyz.yml
@@ -73,8 +73,11 @@ jobs:
         
     - name: Clone luci-app-fileassistant code
       run: |
-        cd lede/package &&  git clone https://github.com/siryle1213/luci-app-fileassistant.git    
-        
+        cd lede/package &&  git clone https://github.com/siryle1213/luci-app-fileassistant.git
+            
+    - name: Clone aliddns code
+      run: |
+        cd lede/package &&  git clone https://github.com/chenhw2/luci-app-aliddns.git        
 ##****************************************************************************     
       
         
