--- a/X86.config
+++ b/X86.config
@@ -64,6 +64,7 @@ CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-aliddns-zh-cn=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_p910nd=y
