--- a/.github/workflows/x86-64dlonzyz.yml
+++ b/.github/workflows/x86-64dlonzyz.yml
@@ -10,7 +10,7 @@ name: Build X86-64-dlonzyz-20210126
 on: 
   release:
     types: [published]
-  push:
+  # push:
     branches: 
        - master
   watch:
@@ -77,7 +77,11 @@ jobs:
             
     - name: Clone aliddns code
       run: |
-        cd lede/package &&  git clone https://github.com/chenhw2/luci-app-aliddns.git        
+        cd lede/package &&  git clone https://github.com/chenhw2/luci-app-aliddns.git
+    - name: Clone serverchan code
+      run: |
+        cd lede/package &&  git clone https://github.com/tty228/luci-app-serverchan.git        
+        
 ##****************************************************************************     
       
         
