--- a/X86.config
+++ b/X86.config
@@ -49,6 +49,8 @@ CONFIG_PACKAGE_luci-app-fileassistant=y
 # CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-aliddns=y
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
+CONFIG_PACKAGE_luci-app-serverchan=y
+CONFIG_PACKAGE_luci-app-softethervpn=y
 # CONFIG_PACKAGE_luci-app-docker=y
 # CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
