--- a/.github/workflows/x86-64-dlonzyz-test.yml
+++ b/.github/workflows/x86-64-dlonzyz-test.yml
@@ -133,5 +133,11 @@ jobs:
         #=================================================
           name: X86-64-dlonzyz-20210129 release v2
           path: ./lede/bin
-   
+    - name: Upload release asset
+      uses: svenstaro/upload-release-action@master
+      with:
+        repo_token: ${{ secrets.TOKEN }}
+        file: ./artifact/*/*
+        tag: ${{ github.ref }}
+        file_glob: true   
     
