--- a/.github/workflows/x86-64-dlonzyz-test.yml
+++ b/.github/workflows/x86-64-dlonzyz-test.yml
@@ -133,3 +133,39 @@ jobs:
         #=================================================
           name: X86-64-dlonzyz-20210129 release v2
           path: ./lede/bin
+     - name: Prepare artifact
+       run: |
+         mkdir -p ./artifact/firmware
+         mkdir -p ./artifact/package
+         mkdir -p ./artifact/buildinfo
+         rm -rf $(find ./bin/targets/ -type d -name "packages")
+         cp -rf $(find ./bin/targets/ -type f) ./artifact/firmware/
+         cp -rf $(find ./bin/packages/ -type f -name "*.ipk") ./artifact/package/
+         cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/
+     - name: Deliver buildinfo
+       uses: actions/upload-artifact@master
+       with:
+         name: OpenWrt_buildinfo
+         path: ./artifact/buildinfo/
+
+      - name: Deliver package
+        uses: actions/upload-artifact@master
+        with:
+          name: OpenWrt_package
+          path: ./artifact/package/
+
+      - name: Deliver firmware
+        uses: actions/upload-artifact@master
+        with:
+          name: OpenWrt_firmware
+          path: ./bin/targets/
+  
+
+      - name: Upload release asset
+        if: github.event == 'release'
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.TOKEN }}
+          file: ./artifact/firmware/*
+          tag: ${{ github.ref }}
+          file_glob: true
