--- a/X86.config
+++ b/X86.config
@@ -16,7 +16,9 @@ CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
-CONFIG_PACKAGE_ipv6-helper=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcpd=y
+CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
 CONFIG_PACKAGE_kmod-ifb=y
