--- a/.github/workflows/x86-64-dlonzyz-test.yml
+++ b/.github/workflows/x86-64-dlonzyz-test.yml
@@ -4,7 +4,7 @@
 #=================================================
 
 #=================================================
-name: Build X86-64-dlonzyz-20210201
+name: Build X86-64-dlonzyz-20210129
 #=================================================
 
 on: 
@@ -131,5 +131,12 @@ jobs:
 
         
         #=================================================
-          name: X86-64-dlonzyz-20210201 release v1.0
+          name: X86-64-dlonzyz-20210129 release v2
           path: ./lede/bin
+    - name: Upload release asset
+      uses: svenstaro/upload-release-action@master
+      with:
+        repo_token: ${{ secrets.TOKEN }}
+        file: ./bin/targets/x86/64/*dlonzyz*.img
+        tag: ${{ github.ref }}
+        file_glob: true   
