--- a/.github/workflows/x86-64-dlonzyz-test.yml
+++ b/.github/workflows/x86-64-dlonzyz-test.yml
@@ -4,7 +4,7 @@
 #=================================================
 
 #=================================================
-name: Build X86-64-dlonzyz-20210129
+name: Build X86-64-dlonzyz-2022.524
 #=================================================
 
 on: 
@@ -131,6 +131,6 @@ jobs:
 
         
         #=================================================
-          name: X86-64-dlonzyz-20210129 release v2
+          name: X86-64-dlonzyz-20220524 release v1
           path: ./lede/bin
           UPLOAD_RELEASE: true
