--- a/X86.config
+++ b/X86.config
@@ -53,6 +53,8 @@ CONFIG_PACKAGE_luci-app-aliddns=y
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
 CONFIG_PACKAGE_luci-app-serverchan=y
 CONFIG_PACKAGE_luci-app-softethervpn=y
+CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+CONFIG_PACKAGE_luci-app-diskman=y
 # CONFIG_PACKAGE_luci-app-docker=y
 # CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
