--- a/X86.config
+++ b/X86.config
@@ -31,7 +31,7 @@ CONFIG_PACKAGE_libltdl=y
 CONFIG_PACKAGE_liblua5.3=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libwebsockets-full=y
-CONFIG_PACKAGE_hysteria=y
+# CONFIG_PACKAGE_hysteria=y
 CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_luci-app-speedtest-web=y
 CONFIG_PACKAGE_luci-app-koolproxyR=y
