--- a/X86.config
+++ b/X86.config
@@ -32,10 +32,10 @@ CONFIG_PACKAGE_liblua5.3=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libwebsockets-full=y
 # CONFIG_PACKAGE_hysteria=y
-CONFIG_PACKAGE_naiveproxy=y
+# CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_luci-app-speedtest-web=y
-CONFIG_PACKAGE_luci-app-koolproxyR=y
-CONFIG_PACKAGE_luci-app-qbittorrent=y
+# CONFIG_PACKAGE_luci-app-koolproxyR=y
+# CONFIG_PACKAGE_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-advancedsetting=y
 # CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_luci-app-eqos=y
@@ -65,7 +65,7 @@ CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
 CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-app-nfs=y
-CONFIG_PACKAGE_luci-app-koolproxyR-zh-cn=y
+# CONFIG_PACKAGE_luci-app-koolproxyR-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-advanced-reboot-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-eqos-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
@@ -85,7 +85,7 @@ CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_p910nd=y
 # CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_tc=y
-CONFIG_PACKAGE_trojan-plus=y
+# CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_unzip=y
 
