--- a/X86.config
+++ b/X86.config
@@ -34,8 +34,8 @@ CONFIG_PACKAGE_libwebsockets-full=y
 # CONFIG_PACKAGE_hysteria=y
 # CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_luci-app-speedtest-web=y
-# CONFIG_PACKAGE_luci-app-koolproxyR=y
-# CONFIG_PACKAGE_luci-app-qbittorrent=y
+CONFIG_PACKAGE_luci-kmod-wireguard=y
+CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-app-advancedsetting=y
 # CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_luci-app-eqos=y
@@ -65,8 +65,9 @@ CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
 CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-app-nfs=y
-# CONFIG_PACKAGE_luci-app-koolproxyR-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-advanced-reboot-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
+CONFIG_PACKAGE_luci-app-advanced-reboot=y
+CONFIG_PACKAGE_luci-i18n-advanced-reboot-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-eqos-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
