--- a/X86.config
+++ b/X86.config
@@ -23,7 +23,7 @@ CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-usb-printer=y
+#CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-nft-tproxy=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcurl=y
