--- a/X86.config
+++ b/X86.config
@@ -13,7 +13,7 @@ CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_frpc=y
+#CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_ipv6helper=y
