--- a/.github/workflows/x86-64-dlonzyz-test.yml
+++ b/.github/workflows/x86-64-dlonzyz-test.yml
@@ -21,10 +21,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Space cleanup and Initialization environment
-        env:
+    - name: Checkout
+      uses: actions/checkout@master
+
+    - name: Space cleanup and Initialization environment
+      env:
           DEBIAN_FRONTEND: noninteractive
-        run: |
+      run: |
           docker rmi `docker images -q`
           sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
           sudo -E apt-mark hold grub-efi-amd64-signed
