--- a/.github/workflows/x86-64-dlonzyz-test.yml
+++ b/.github/workflows/x86-64-dlonzyz-test.yml
@@ -4,8 +4,8 @@
 #=================================================
 name: Build X86-64-dlonzyz-2024.9.1
 
-#on: 
- # release: 
+on: 
+  release:
     types: [published]
   #push:
     branches: 
