--- a/.github/workflows/x86-64-dlonzyz-test.yml
+++ b/.github/workflows/x86-64-dlonzyz-test.yml
@@ -14,7 +14,10 @@ on:
     types: [started]
 
 jobs:
-  build:
+  build_openwrt:
+
+    name: Build OpenWrt Firmware
+
     runs-on: ubuntu-latest
 
     steps:
