--- a/.github/workflows/x86-64-dlonzyz-test.yml
+++ b/.github/workflows/x86-64-dlonzyz-test.yml
@@ -7,11 +7,11 @@ name: Build X86-64-dlonzyz-2024.9.1
 on: 
   release:
     types: [published]
-  #push:
+  push:
     branches: 
        - master
-  watch:
-    types: [started]
+ # watch:
+  #  types: [started]
 
 jobs:
   build:
