--- a/.github/workflows/x86-64-dlonzyz-test.yml
+++ b/.github/workflows/x86-64-dlonzyz-test.yml
@@ -2,21 +2,13 @@
 #   Description: Build  X86-64固件 FROM LEAN'S LEDE
 #   Author: JK
 #=================================================
-name: Build OpenWrt
 
-on:
-  release:
-    types: [published]
-  push:
-    branches:
-      - dev-lean-lede
-   # paths:
-    #  - '.config'
-  # schedule:
-    # - cron: 0 8 * * 5
-  watch:
-    types: [started]
+name: Build_x86_64
 
+# Add a button to trigger the workflow
+on: 
+  repository_dispatch:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -26,9 +18,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
 
-    - name: Space cleanup and Initialization environment
+    - name: Initialization environment
       env:
-          DEBIAN_FRONTEND: noninteractive
+        DEBIAN_FRONTEND: noninteractive
       run: |
         set +e
         docker rmi `docker images -q`
@@ -44,7 +36,6 @@ jobs:
         sudo -E apt-get -y install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev qemu-img
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
-        sudo -E timedatectl set-timezone "Asia/Shanghai"
         
         
     - name: Clone source code
