--- a/.github/workflows/build-gdock+passwall20201219.yml
+++ b/.github/workflows/build-gdock+passwall20201219.yml
@@ -3,7 +3,7 @@
 #   Author: JK
 #=================================================
 
-name: Build 竞斗云+passwall-20201219
+name: Build 竞斗云+passwall-20240917
 
 on: 
   release:
@@ -15,7 +15,7 @@ on:
 #    types: [started]
 jobs:
   build:
-    runs-on: ubuntu-laste
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
