--- a/.github/workflows/x86-64-dlonzyz-test.yml
+++ b/.github/workflows/x86-64-dlonzyz-test.yml
@@ -82,9 +82,9 @@ jobs:
         #=================================================
         #+++++++++++++++++++++++++++++++++++++++++++++++++
         cp -f X86.config ./lede/.config
-        chmod +x diy.sh
+        chmod +x diy-x86.sh
         cd lede
-        ../diy.sh
+        ../diy-x86.sh
         #++++++++++++++++++++++++++++++++++++++++++++++++
         #=================================================
         make defconfig
